Extended [Exam-Application]:Given proper model names,added buttons and smart button in other models

--- a/Exam_Application/views/exam_menus_views.xml
+++ b/Exam_Application/views/exam_menus_views.xml
@@ -6,31 +6,31 @@
 
     <menuitem
         id="exam_details"
-        name="[Examination Hall]-details"
+        name="Examination Hall details"
         parent="exam_menu"
         action="action_exam_details"/>
 
     <menuitem
         id="student_details"
-        name="[Student]-Exam details"
+        name="Student details"
         parent="exam_menu"
         action="action_student_details" />
 
     <menuitem
         id="faculty_details"
-        name="[Faculty]-Exam details"
+        name="Faculty details"
         parent="exam_menu"
         action="action_faculty_details" />
 
     <menuitem
         id="supervisor_details"
-        name="[Supervisor]-Exam details"
+        name="Supervisor details"
         parent="exam_menu"
         action="action_supervisor_details"/>
 
     <menuitem
         id="subject_details"
-        name="[Subject]-Exam details"
+        name="Subject details"
         parent="exam_menu"
         action="action_examsubject_details" />
 </odoo>
