--- a/Exam_Application/views/student_views.xml
+++ b/Exam_Application/views/student_views.xml
@@ -87,9 +87,8 @@
                             <field name="relation_field1"></field>
                         </group>
                     </group>
-                </sheet>
-                <!--one2many field having students details in the notebook form-->
-                <notebook>
+                    <!--one2many field having students details in the notebook form-->
+                    <notebook>
                     <page string="Student Details(One2many field)">
                         <field name="relation_field3">
                             <tree editable="bottom">
@@ -106,6 +105,7 @@
                         </field>
                     </page>
                 </notebook>
+                </sheet>
             </form>
         </field>
     </record>
@@ -134,7 +134,7 @@
                 <separator/>
                 <filter name="filter_selection_option" string="B selector" domain="[('select_option','=','b')]"/>
                 <separator/>
-                <filter name="filter_amount_field" string="Amount filter less than 200" domain="[('amount_field','&lt;=',200)]"/>
+                <filter name="filter_amount_field" string="[Exam Fee] filter less than 200" domain="[('amount_field','&lt;=',200)]"/>
                 <separator/>
                 <filter name="filter_status_field" string="Status Filter having Done" domain="[('state_field','=','done')]"/>
 
@@ -200,7 +200,7 @@
                 <sheet>
                     <!--smart button-->
                      <div class="oe_button_box" name="button_box">
-                        <button name="action_count_exam" type="object" class="oe_start_button" icon="fa-solid fa-user" help="This is smart button having exam details according to student id">
+                        <button name="action_count_exam" type="object" class="oe_start_button" icon="fa-solid fa-user" help="This is smart button having exam details according to student id details">
                             <div class="o_stat_info">
                                 <field name="exam_count" class="o_stat_value"/>
                                 <span class="o_stat_text">Exam records</span>
@@ -228,6 +228,26 @@
             </form>
         </field>
     </record>
+    <!--Student search view-->
+    <record id="student_details_search" model='ir.ui.view'>
+        <field name="name">student.details.search</field>
+        <field name="model">student.details</field>
+        <field name="arch" type="xml">
+            <search>
+                <field name="student_id"></field>
+                <field name="student_examsubject_id"></field>
+                <field name="student_enrollment_no"></field>
+                <field name="student_name"></field>
+                <field name="student_address"></field>
+                <field name="student_confirmation"></field>
+                <field name="student_fees"></field>
+                <field name="student_gender"></field>
+                <field name="student_exam_date"></field>
+                <field name="student_exam_date_time"></field>
+                <field name="student_exam_hallticket_attach"></field>
+            </search>
+        </field>
+    </record>
 
 <!--Faculty list view-->
     <record id="faculty_details_list" model='ir.ui.view'>
@@ -241,6 +261,7 @@
                 <field name="faculty_fees" widget="badge"></field>
                 <field name="faculty_address"></field>
                 <field name="faculty_subject_no"></field>
+                <field name="faculty_state_field"></field>
                 <field name="faculty_subject_exam_date"></field>
                 <field name="faculty_gender" widget="badge"></field>
                 <field name="faculty_subject_exam_date_time" widget="remaining_days"></field>
@@ -255,6 +276,13 @@
         <field name="model">faculty.details</field>
         <field name="arch" type="xml">
             <form>
+                 <header>
+                    <!--buttons-->
+                    <field name="faculty_state_field" widget="statusbar" statusbar_visible="cancel,in progress,done"/>
+                    <button string="Paper Cancel" class="btn-danger" name="faculty_action_button" type="object"/>
+                    <button string="Paper In Progress" class="btn-primary" name="faculty_in_progress_button" type="object"/>
+                    <button string="Paper Done" class="btn-success" name="faculty_action_done" type="object"/>
+                </header>
                 <sheet>
                     <group>
                         <group>
@@ -264,6 +292,7 @@
                             <field name="faculty_address"></field>
                             <field name="faculty_fees"></field>
                             <field name="faculty_subject_no"></field>
+                            <field name="faculty_state_field"></field>
                         </group>
                         <group>
                             <field name="faculty_subject_exam_date"></field>
@@ -277,6 +306,28 @@
             </form>
         </field>
     </record>
+    <!--Faculty search view-->
+    <record id="faculty_details_search" model='ir.ui.view'>
+        <field name="name">faculty.details.search</field>
+        <field name="model">faculty.details</field>
+        <field name="arch" type="xml">
+            <search>
+                <field name="faculty_id"></field>
+                <field name="faculty_subject_id"></field>
+                <field name="faculty_name"></field>
+                <field name="faculty_fees"></field>
+                <field name="faculty_address"></field>
+                <field name="faculty_subject_no"></field>
+                <field name="faculty_state_field"></field>
+                <field name="faculty_subject_exam_date"></field>
+                <field name="faculty_gender"></field>
+                <field name="faculty_subject_exam_date_time"></field>
+                <field name="faculty_present_on_exam_confirmation"></field>
+                <field name="faculty_documents_attach"></field>
+            </search>
+        </field>
+    </record>
+
 
 <!--Supervisor list view-->
     <record id="supervisor_details_list" model='ir.ui.view'>
@@ -322,6 +373,25 @@
                     </group>
                 </sheet>
             </form>
+        </field>
+    </record>
+    <!--Supervisor search view-->
+    <record id="supervisor_details_search" model='ir.ui.view'>
+        <field name="name">supervisor.details.search</field>
+        <field name="model">supervisor.details</field>
+        <field name="arch" type="xml">
+            <search>
+                <field name="supervisor_id"></field>
+                <field name="supervisor_name"></field>
+                <field name="supervisor_age"></field>
+                <field name="supervisor_fees"></field>
+                <field name="supervisor_address"></field>
+                <field name="supervisor_present_exam_date"></field>
+                <field name="supervisor_present_exam_date_time"></field>
+                <field name="supervisor_gender"></field>
+                <field name="supervisor_present_on_exam_confirmation"></field>
+                <field name="supervisor_documents_attach"></field>
+            </search>
         </field>
     </record>
 
@@ -373,6 +443,28 @@
             </form>
         </field>
     </record>
+    <!--Subject search view-->
+    <record id="subject_details_search" model='ir.ui.view'>
+        <field name="name">subject.details.search</field>
+        <field name="model">subject.details</field>
+        <field name="arch" type="xml">
+            <search>
+                <field name="subject_id"></field>
+                <field name="subject_faculty_id"></field>
+                <field name="subject_name"></field>
+                <field name="subject_chapters"></field>
+                <field name="subject_description"></field>
+                <field name="subject_textbooks_no"></field>
+                <field name="subject_exam_date"></field>
+                <field name="subject_exam_date_time"></field>
+                <field name="other_subject_name"></field>
+                <field name="exam_subject_confirmation"></field>
+                <field name="subject_textbooks"></field>
+            </search>
+        </field>
+    </record>
+
+
 
     <record id="action_exam_details" model="ir.actions.act_window">
         <field name="name">Exam Details</field>
@@ -383,25 +475,25 @@
     <record id="action_student_details" model="ir.actions.act_window">
         <field name="name">Student Details</field>
         <field name="res_model">student.details</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">tree,search,form</field>
     </record>
 
      <record id="action_faculty_details" model="ir.actions.act_window">
         <field name="name">Faculty Details</field>
         <field name="res_model">faculty.details</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">tree,search,form</field>
     </record>
 
     <record id="action_supervisor_details" model="ir.actions.act_window">
         <field name="name">Supervisor Details</field>
         <field name="res_model">supervisor.details</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">tree,search,form</field>
     </record>
 
     <record id="action_examsubject_details" model="ir.actions.act_window">
         <field name="name">Subject Details</field>
         <field name="res_model">subject.details</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">tree,search,form</field>
     </record>
 
 </odoo>
