--- a/Exam_Application/views/student_views.xml
+++ b/Exam_Application/views/student_views.xml
@@ -18,6 +18,7 @@
                 <field name="student_exam_start_date"></field>
                 <field name="student_exam_end_date_time" widget="remaining_days"></field>
                 <field name="student_exam_hallticket_attach"></field>
+                <field name="gender_unlink"></field>
             </tree>
         </field>
     </record>
@@ -27,6 +28,10 @@
         <field name="model">student.details</field>
         <field name="arch" type="xml">
             <form>
+                <!--button for unlink()-orm method -->
+                <div class="oe_title">
+                    <button string="Button unlink(Delete) Data" class="btn-primary" name="action_button_unlink" type="object" help="on clicking this button, this will delete the data"/>
+                </div>
                 <header>
                     <button string="Total Fees" class="btn-primary" name="action_fees_calculation" type="object"  help="this is a button having functionality of calculating total fees excluding 500 for exam fees"/>
                 </header>
@@ -54,6 +59,7 @@
                             <field name="student_name"></field>
                             <field name="student_address"></field>
                             <field name="student_confirmation"></field>
+                            <field name="gender_unlink"></field>
                         </group>
                         <group>
                             <field name="student_fees"></field>
