--- a/Exam_Application/views/student_views.xml
+++ b/Exam_Application/views/student_views.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-<!--Student list view-->
     <record id="student_details_list" model='ir.ui.view'>
         <field name="name">student.details.list</field>
         <field name="model">student.details</field>
@@ -10,12 +9,12 @@
                 <field name="student_examsubject_id"></field>
                 <field name="student_enrollment_no"></field>
                 <field name="student_name" widget="badge"></field>
+                <field name="student_unique_code"></field>
                 <field name="student_address"></field>
                 <field name="student_confirmation" widget="boolean_toggle"></field>
                 <field name="student_fees" sum="Total" widget="monetary"></field>
                 <field name="student_exam_fees" sum="Total" widget="monetary"></field>
                 <field name="student_gender" widget="badge"></field>
-                <field name="student_exam_start_date"></field>
                 <field name="student_exam_end_date_time" widget="remaining_days"></field>
                 <field name="student_exam_hallticket_attach"></field>
                 <field name="gender_unlink"></field>
@@ -23,7 +22,6 @@
             </tree>
         </field>
     </record>
-    <!--Student form view-->
     <record id="student_details_form" model='ir.ui.view'>
         <field name="name">student.details.form</field>
         <field name="model">student.details</field>
@@ -33,13 +31,11 @@
                     <button string="Total Fees" class="btn-primary" name="action_fees_calculation" type="object"  help="this is a button having functionality of calculating total fees excluding 500 for exam fees"/>
                 </header>
                 <sheet>
-                    <!--sequence number-->
                     <div class="oe_title">
                         <h3>
                             <field name="student_sequence_number" readonly="1"/>
                         </h3>
                     </div>
-                    <!--smart button-->
                      <div class="oe_button_box" name="button_box">
                         <button name="action_count_exam" type="object" class="oe_start_button" icon="fa-solid fa-user" help="This is smart button having exam details according to student id details">
                             <div class="o_stat_info">
@@ -54,6 +50,7 @@
                             <field name="student_examsubject_id"></field>
                             <field name="student_enrollment_no"></field>
                             <field name="student_name"></field>
+                            <field name="student_unique_code"></field>
                             <field name="student_address"></field>
                             <field name="student_confirmation"></field>
                             <field name="gender_unlink"></field>
@@ -72,15 +69,16 @@
             </form>
         </field>
     </record>
-    <!--Student search view-->
     <record id="student_details_search" model='ir.ui.view'>
         <field name="name">student.details.search</field>
         <field name="model">student.details</field>
         <field name="arch" type="xml">
             <search>
                 <field name="student_id"></field>
+                <field name="student_examsubject_id"></field>
                 <field name="student_enrollment_no"></field>
                 <field name="student_name"></field>
+                <field name="student_unique_code"></field>
                 <field name="student_address"></field>
                 <field name="student_confirmation"></field>
                 <field name="student_fees"></field>
